test/files/neg/t8266-invalid-interp.check
t8266-invalid-interp.scala:5: error: invalid escape '\x' not one of [\b, \t, \n, \f, \r, \\, \", \'] at index 1 in "a\xc". Use \\ for literal \.
    f"a\xc",
       ^
t8266-invalid-interp.scala:7: error: \v is not supported, but for vertical tab use \u000b;
invalid escape '\v' not one of [\b, \t, \n, \f, \r, \\, \", \'] at index 1 in "a\vc". Use \\ for literal \.
    f"a\vc"
       ^
two errors found
